data als service
data is nu een service

--- a/Site/carMeets/src/app/app.component.html
+++ b/Site/carMeets/src/app/app.component.html
@@ -64,7 +64,7 @@
   <div class="col-lg-9" id="main">
 
     <!-- Meeting -->
-    <app-meeting *ngFor='let localMeeting of _meetings' 
+    <app-meeting *ngFor='let localMeeting of meetings' 
         [meeting]='localMeeting'></app-meeting>
   </div>
 
