--- a/Site/carMeets/src/app/app.component.html
+++ b/Site/carMeets/src/app/app.component.html
@@ -44,6 +44,7 @@
         <input type='text' placeholder='filter meeting...' #filter>
         <button (click)="applyFilter(filter.value)">filter</button>
       </div>
+      <app-add-meeting (newMeeting)="addMeeting($event)"></app-add-meeting>
     </section>
 
     <!-- About -->
