--- a/Site/carMeets/frontend/src/app/add-meeting/add-meeting.component.html
+++ b/Site/carMeets/frontend/src/app/add-meeting/add-meeting.component.html
@@ -1,5 +1,7 @@
-<div>
-  <label for="name">Add meeting tester Name:</label>
-  <input id="name" name="name" #meetingName>
+<div class="pt-20 pb-20">
+  <div>
+    <label for="name">Add meeting tester Name:</label>
+    <input class="mb-10" type='text' placeholder='Insert name of meeting...' #meetingName>
+  </div>
+  <button (click)="addMeeting(meetingName)">Add meeting</button>
 </div>
-<button (click)="addMeeting(meetingName)">Add meeting</button>
