--- a/Site/carMeets/frontend/src/app/app.component.html
+++ b/Site/carMeets/frontend/src/app/app.component.html
@@ -1,77 +1,5 @@
-<div id="wrapper">
-  <nav class="navbar">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <img src="images/logo.png" class="navbar-brand">
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a href="#">
-              <span class="glyphicon glyphicon-user"></span> Registreer</a>
-          </li>
-          <li>
-            <a href="#">
-              <span class="glyphicon glyphicon-log-in"></span> Meld aan</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- Sidebar -->
-  <section class="col-lg-3" id="sidebar">
-
-    <!-- Intro -->
-    <section id="intro">
-      <header>
-        <h2>CarMeets Belgium</h2>
-        <p>Vind car meetings bij jou in de buurt!</p>
-      </header>
-    </section>
-
-    <!-- Mini Posts -->
-
-    <!-- Posts List -->
-    <section class="blurb">
-      <div class="pb-20">
-        <h2>Filter de meetings</h2>
-        <div>
-          <input class="mb-10" type='text' placeholder='filter meeting op naam...' #filter>
-          <button (click)="applyFilter(filter.value)">filter</button>
-        </div>
-      </div>
-      <app-add-meeting (newMeeting)="addMeeting($event)"></app-add-meeting>
-    </section>
-
-    <!-- About -->
-    <section class="blurb">
-      <h2>Over CarMeets.be</h2>
-      <p>Net zoals vele autoliefhebbers was ik het beu steeds te moeten horen dat ik weer een kwaliteitsmeeting gemist had omdat
-        ik niet wist wanneer deze plaatsvond. Daarom besloot ik,
-        <a href="https://www.lennertbontinck.com/">Lennert Bontinck</a>, een website te maken waar je snel en eenvoudig alle meetings naar jouw smaak kan terugvinden
-        en bewaren in je agenda.</p>
-    </section>
-
-    <!-- Footer -->
-    <section id="footer">
-      <p class="copyright">
-        <a target="_blank" href="https://www.lennertbontinck.com/"> &copy; Lennert Bontinck</a>
-      </p>
-    </section>
-
-  </section>
-
-  <!-- Main -->
-  <div class="col-lg-9" id="main">
-
-    <!-- Meeting -->
-    <app-meeting *ngFor='let localMeeting of meetings | meetingFilter: filterMeetingName' [meeting]='localMeeting'></app-meeting>
-  </div>
-
+<div id="wrapper" class="pb-0">
+  <app-navbar></app-navbar>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
