--- a/Site/carMeets/frontend/src/styles.css
+++ b/Site/carMeets/frontend/src/styles.css
@@ -2,6 +2,11 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
 /* Custom */
 
+.footer {
+  border-top: solid 1px rgba(160, 160, 160, 0.3); 
+  padding-top: 10px;
+}
+
 .no-hover:hover {
 	color: inherit !important;
 }
@@ -617,7 +622,6 @@ pre code {
 }
 
 hr {
-  border: 0;
   border-bottom: solid 1px rgba(160, 160, 160, 0.3);
   margin: 2em 0;
 }
