404 and active in nav

--- a/Site/carMeets/frontend/src/app/meeting/meeting.component.html
+++ b/Site/carMeets/frontend/src/app/meeting/meeting.component.html
@@ -22,7 +22,7 @@
   <footer>
     <ul class="actions">
       <li>
-        <a href="#" class="button big">Lees verder</a>
+        <a [routerLink]="['/meet-detail', meeting.name]" class="button big">Lees verder</a>
       </li>
     </ul>
     <ul class="stats">
