--- a/Site/carMeets/frontend/src/app/navbar/navbar.component.html
+++ b/Site/carMeets/frontend/src/app/navbar/navbar.component.html
@@ -6,17 +6,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img src="images/logo.png" class="navbar-brand">
+      <img src="images/logo.png" [routerLink]="['/home']" class="navbar-brand">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
 
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="#">
+          <a routerLinkActive='active' routerLink="/register" >
             <span class="glyphicon glyphicon-user"></span> Registreer</a>
         </li>
         <li>
-          <a href="#">
+          <a routerLinkActive='active' routerLink="/login" >
             <span class="glyphicon glyphicon-log-in"></span> Meld aan</a>
         </li>
       </ul>
