--- a/Site/carMeets/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/Site/carMeets/frontend/src/app/page-not-found/page-not-found.component.html
@@ -8,8 +8,8 @@
 </div>
 <div class='c'>
   <div class='_404'>404</div>
-  <div class='_1'>THE PAGE</div>
-  <div class='_2'>WAS NOT FOUND</div>
+  <div class='_1'>PAGINA</div>
+  <div class='_2'>NIET GEVONDEN</div>
   <br>
-  <button routerLink="/login">BACK TO CARMEETS.BE</button>
+  <button routerLink="/login">TERUG NAAR CARMEETS.BE</button>
 </div>
