--- a/Site/carMeets/frontend/src/app/page-not-found/page-not-found.component.css
+++ b/Site/carMeets/frontend/src/app/page-not-found/page-not-found.component.css
@@ -26,7 +26,7 @@
   text-align: center;
   display: block;
   position: relative;
-  font-size: 20px;
+  font-size: 2em;
 }
 .text {
   font-size: 70px;
