--- a/Site/carMeets/frontend/src/app/footer/footer.component.html
+++ b/Site/carMeets/frontend/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
-<footer class="text-center pb-10">
+<footer class="text-center pb-10 col-xs-12">
   <div class="container">
+    <hr>
     <span class="text-muted footer">&copy; Lennert Bontinck {{currentYear}}</span>
   </div>
 </footer>
