--- a/Site/carMeets/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/Site/carMeets/frontend/src/app/page-not-found/page-not-found.component.html
@@ -10,6 +10,6 @@
   <div class='_404'>404</div>
   <div class='_1'>PAGINA</div>
   <div class='_2'>NIET GEVONDEN</div>
+  <button class="mb-20" routerLink="/home">TERUG NAAR CARMEETS.BE</button>
   <br>
-  <button routerLink="/login">TERUG NAAR CARMEETS.BE</button>
 </div>
