--- a/Site/carMeets/frontend/src/styles.css
+++ b/Site/carMeets/frontend/src/styles.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:400,800,900");
 /* Custom */
 
+.image.featured img {
+  width: 100%;
+}
+
 .navbar-nav > li > a.active{
   color: #E8175D!important;
 }
@@ -1163,10 +1167,6 @@ input[type="radio"]+label:before {
   width: 100%;
 }
 
-.image.featured img {
-  width: 100%;
-}
-
 @media screen and (max-width: 736px) {
   .image.featured {
     margin: 0 0 1.5em 0;
@@ -1559,7 +1559,7 @@ dl dd {
   background: #ffffff;
   border: solid 1px rgba(160, 160, 160, 0.3);
   margin: 0 0 3em 0;
-  position: relative;
+  display: inline-block;
 }
 
 .post>header {
@@ -1580,7 +1580,7 @@ dl dd {
   -ms-flex-grow: 1;
   flex-grow: 1;
   -ms-flex: 1;
-  padding: 3.75em 3em 3.3em 3em;
+  padding: 1.75em 3em 1em 3em;
 }
 
 .post>header .title h2 {
@@ -1593,7 +1593,7 @@ dl dd {
 }
 
 .post>header .meta {
-  padding: 3.75em 3em 1.75em 3em;
+  padding: 1.75em 3em 1em 3em;
   border-left: solid 1px rgba(160, 160, 160, 0.3);
   min-width: 17em;
   text-align: right;
@@ -1620,25 +1620,25 @@ dl dd {
   white-space: nowrap;
 }
 
-.post>a.image.featured {
+.post>div>a.image.featured {
   overflow: hidden;
 }
 
-.post>a.image.featured img {
+.post>div>a.image.featured img {
   -moz-transition: -moz-transform 0.2s ease-out;
   -webkit-transition: -webkit-transform 0.2s ease-out;
   -ms-transition: -ms-transform 0.2s ease-out;
   transition: transform 0.2s ease-out;
 }
 
-.post>a.image.featured:hover img {
+.post>div>a.image.featured:hover img {
   -moz-transform: scale(1.05);
   -webkit-transform: scale(1.05);
   -ms-transform: scale(1.05);
   transform: scale(1.05);
 }
 
-.post>footer {
+.post>div>footer {
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
@@ -1649,20 +1649,20 @@ dl dd {
   align-items: center;
 }
 
-.post>footer .actions {
+.post>div>footer .actions {
   -moz-flex-grow: 1;
   -webkit-flex-grow: 1;
   -ms-flex-grow: 1;
   flex-grow: 1;
 }
 
-.post>footer .stats {
+.post>div>footer .stats {
   cursor: default;
   list-style: none;
   padding: 0;
 }
 
-.post>footer .stats li {
+.post>div>footer .stats li {
   border-left: solid 1px rgba(160, 160, 160, 0.3);
   display: inline-block;
   font-family: "Raleway", Helvetica, sans-serif;
@@ -1675,17 +1675,17 @@ dl dd {
   text-transform: uppercase;
 }
 
-.post>footer .stats li:first-child {
+.post>div>footer .stats li:first-child {
   border-left: 0;
   margin-left: 0;
   padding-left: 0;
 }
 
-.post>footer .stats li .icon {
+.post>div>footer .stats li .icon {
   border-bottom: 0;
 }
 
-.post>footer .stats li .icon:before {
+.post>div>footer .stats li .icon:before {
   color: rgba(160, 160, 160, 0.3);
   margin-right: 0.75em;
 }
