--- a/Site/carMeets/frontend/src/app/meeting/meeting.component.html
+++ b/Site/carMeets/frontend/src/app/meeting/meeting.component.html
@@ -9,7 +9,7 @@
     <div class="meta">
       <time class="published" datetime="2015-11-01">{{meeting.date | date : 'longDate'}}</time>
       <div class="author">
-        <a class="name">{{meeting.gemeente}}</a>
+        <a class="no-hover name">{{meeting.gemeente}}</a>
         <i class="icon fa-map-marker font-40"></i>
       </div>
     </div>
