--- a/Site/carMeets/frontend/src/app/navbar/navbar.component.html
+++ b/Site/carMeets/frontend/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a routerLinkActive='active' routerLink="/register" >
+          <a routerLinkActive='active' routerLink="/registreer" >
             <span class="glyphicon glyphicon-user"></span> Registreer</a>
         </li>
         <li>
