registreer page en nieuwe fa icons mits nodige aanpassingen voor support

--- a/Site/carMeets/frontend/src/app/login-page/login-page.component.html
+++ b/Site/carMeets/frontend/src/app/login-page/login-page.component.html
@@ -12,7 +12,7 @@
         <div class="text-center pb-20">
           <a class="txt2" routerLink="/registreer">
             Of maak een account aan
-            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+            <i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i>
           </a>
         </div>
 
