--- a/Site/carMeets/frontend/src/app/footer/footer.component.html
+++ b/Site/carMeets/frontend/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="text-center pb-10 col-xs-12">
   <div class="container">
     <hr>
-    <span class="text-muted footer">&copy; Lennert Bontinck {{currentYear}}</span>
+    <a href="https://www.lennertbontinck.com/" target="_blank" class="no-hover"><span class="text-muted footer">&copy; Lennert Bontinck {{currentYear}}</span></a>
   </div>
 </footer>
