Gebruiker kan registreren met extra: email en role

--- a/Site/carMeets/frontend/src/app/login-page/login-page.component.html
+++ b/Site/carMeets/frontend/src/app/login-page/login-page.component.html
@@ -4,46 +4,7 @@
       <div class="login100-pic" data-tilt>
         <img src="../../images/logo.png" alt="IMG">
       </div>
-
-      <form>
-        <span class="login100-form-title pb-0">
-          Aanmelden op CarMeets.be
-        </span>
-        <div class="text-center pb-20">
-          <a class="txt2" routerLink="/registreer">
-            Of maak een account aan
-            <i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i>
-          </a>
-        </div>
-
-        <div class="wrap-input100">
-          <input class="input100" type="text" placeholder="E-mailadres">
-          <span class="focus-input100"></span>
-          <span class="symbol-input100">
-            <i class="fa fa-envelope" aria-hidden="true"></i>
-          </span>
-        </div>
-
-        <div class="wrap-input100">
-          <input class="input100" type="password" placeholder="Wachtwoord">
-          <span class="focus-input100"></span>
-          <span class="symbol-input100">
-            <i class="fa fa-lock" aria-hidden="true"></i>
-          </span>
-        </div>
-        
-        <div class="container-login100-form-btn">
-          <button class="login100-form-btn">
-            Aanmelden
-          </button>
-        </div>
-
-        <div class="text-center p-t-12">
-          <a class="txt2" routerLink="/404">
-             Wachtwoord vergeten?
-          </a>
-        </div>
-      </form>
+      <app-login></app-login> 
     </div>
   </div>
 </div>
