--- a/Site/carMeets/frontend/src/app/register-page/register-page.component.html
+++ b/Site/carMeets/frontend/src/app/register-page/register-page.component.html
@@ -4,56 +4,7 @@
       <div class="register100-pic" data-tilt>
         <img src="../../images/logo.png" alt="IMG">
       </div>
-
-      <form>
-        <span class="register100-form-title pb-0">
-          Een account aanmaken
-        </span>
-        <div class="text-center pb-20">
-          <a class="txt2" routerLink="/login">
-            Of meld je aan
-            <i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i>
-          </a>
-        </div>
-
-        <div class="wrap-input100">
-          <input class="input100" type="text" placeholder="E-mailadres">
-          <span class="focus-input100"></span>
-          <span class="symbol-input100">
-            <i class="fa fa-envelope" aria-hidden="true"></i>
-          </span>
-        </div>
-
-        <div class="wrap-input100">
-          <input class="input100" type="text" placeholder="Gebruikersnaam">
-          <span class="focus-input100"></span>
-          <span class="symbol-input100">
-            <i class="far fa-id-card" aria-hidden="true"></i>
-          </span>
-        </div>
-
-        <div class="wrap-input100">
-          <input class="input100" type="password" placeholder="Wachtwoord">
-          <span class="focus-input100"></span>
-          <span class="symbol-input100">
-            <i class="fa fa-lock" aria-hidden="true"></i>
-          </span>
-        </div>
-
-        <div class="wrap-input100">
-          <input class="input100" type="password" placeholder="Bevestig wachtwoord">
-          <span class="focus-input100"></span>
-          <span class="symbol-input100">
-            <i class="fa fa-lock" aria-hidden="true"></i>
-          </span>
-        </div>
-        
-        <div class="container-register100-form-btn">
-          <button class="register100-form-btn">
-            Registreer
-          </button>
-        </div>
-      </form>
+      <app-register></app-register>      
     </div>
   </div>
 </div>
